--- a/index.html
+++ b/index.html
@@ -17,9 +17,6 @@
             <li class="nav item">
                 <a class="nav1" class="nav-link" href="#card1">CARD!</a>
             </li>
-            <li class="nav item">
-                <a class="nav1" class="nav-link" href="#card2">CARD!</a>
-            </li>
         </ul>
     </nav>
         <h1>Phoenix</h1>
@@ -65,20 +62,21 @@
     <br>
     <br>
     <br>
-    <div  id="card1" class="card bg-danger text-white">
-        <div class="card-title">Person</div>
+    <div class="container-mt-3">
+    <div class="row">
+    <div  id="card1" class="col-sm bg-danger text-white" style="width: 800px;">
+        <div class="card-title" >Person</div>
         <div class="card-header"> First Name: Shrish</div>
         <div class="card-body"> Card </div>
         <div class="card-footer">Bio</div>
     </div>
-    <br>
-    <br>
-    <br>
-    <div  id="card2" class="card bg-black text-white">
+    <div  id="card2" class="col-sm bg-black text-white" style="width: 800px;">
         <div class="card-title">Person</div>
         <div class="card-header">Last Name: Kushwaha</div>
         <div class="card-body">Card </div>
         <div class="card-footer">Bio</div>
     </div>
+</div>
+</div>
 </body>
 </html>
