--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Document</title>
 </head>
 <body>
+    <!--NavBar with fixed position-->
     <nav class="navbar navbar-expand-md bg-danger">
         <ul class="navbar nav">
             <li class = "nav item">
@@ -19,10 +20,12 @@
             </li>
         </ul>
     </nav>
-        <h1>Phoenix</h1>
+        <h1>PhoenixWEB</h1>
+        <!--spacers-->
         <br>
         <br>
         <br>
+        <!--Columns-->
         <div class="row">
             <div class="col-md p-3 bg-danger text-white">First part</div>
             <div class="col-md p-3 bg-dark text-white">Second part</div>
@@ -33,6 +36,7 @@
     <br>
         <br>
         <br>
+        <!--Carousel-->
     <div class="container">
 
     <div id="car" class="carousel slide" data-bs-ride="carousel">
@@ -41,6 +45,7 @@
 <button type="button" data-bs-ride="#car" data-bs-slide-to="1"></button>
 <button type="button" data-bs-ride="#car" data-bs-slide-to="2"></button>
 </div>
+<!--Carousel Images-->
 <div class="carousel-inner">
     <div class = "carousel-item active">
         <img src="Phoenix1.jpg" alt="Phoenix1" class="d-block w-100">
@@ -52,6 +57,7 @@
         <img src="Phoenix3.jpg" alt="Phoenix1" class="d-block w-100">
     </div>
 </div>
+<!--Carousel Buttons-->
 <button class="carousel-control-prev" type="button" data-bs-target="#car" data-bs-slide = "prev">
     <span class = "carousel-control-prev-icon"></span>
 </button>
@@ -62,6 +68,7 @@
     <br>
     <br>
     <br>
+    <!--Cards-->
     <div class="container-mt-3">
     <div class="row">
     <div  id="card1" class="col-sm bg-danger text-white" style="width: 800px;">
